--- a/ICE-CSS1/css/ice-style.css
+++ b/ICE-CSS1/css/ice-style.css
@@ -1,4 +1,10 @@
 *{margin:0; padding:0}
+
+#wrap{
+  position: relative;
+  overflow: inherit;
+}
+
 header{
   background: yellow;
   text-align: right;
@@ -6,7 +12,6 @@ header{
 
 nav{
   background: green;
-  /* padding-left: 200px; */
 }
 
 nav ul{
@@ -28,16 +33,13 @@ nav ul li a{
 }
 
 aside{
-  /* float: right; */
-  /* height: 324px; */
+  display: inline-block;
   position: absolute;
-  width: 200px;
-  bottom: 0px;
-  top: 77px;
+  height: 100%;
+  width: 20%;
   right: 0px;
-  background: url(http://www.literarygenius.info/images/william-shakespeare.jpg) no-repeat center;
+  background: url("http://www.literarygenius.info/images/william-shakespeare.jpg") no-repeat center;
   background-size:contain;
-  /* background-position: bottom; */
   background-color: white;
 }
 
@@ -46,25 +48,20 @@ aside h2{
 }
 
 aside ul{
-  text-align: center;
-  margin-left: 20px;
+  position: relative;
+  left: 25%;
   list-style-position: inside;
 }
 
 #content{
-  position: absolute;
-  right: 200px;
-  top: 77px;
-  left: 0px;
-  bottom: 40px;
-}
-
-#content{
+  display: inline-block;
   background:gray;
+  width: 80%;
 }
 
 #content h1{
   font-size: 40px;
+  font-weight: bold;
 }
 
 #content p{
@@ -78,9 +75,7 @@ aside ul{
 
 footer{
   position: absolute;
-  bottom: 0px;
-  left: 0px;
-  right: 200px;
+  width: 80%;
+  padding: 20px 0;
   background: green;
-  padding: 20px;
 }
