--- a/ICE-form/CSS/formStyle.css
+++ b/ICE-form/CSS/formStyle.css
@@ -12,6 +12,15 @@ body {
 	padding: .5%;
 }
 
+h2 {
+	color: #656664;
+}
+
+h4 {
+	color: #656664;
+}
+
+
 form{
 	background: #fffbf0;
 	-moz-border-radius: 2%;
@@ -21,7 +30,19 @@ form{
 	width: 75%;
 	display: block;
 	margin: 0 auto;
-	border: 1px solid #6b6b6b;
+	border: 1px solid #E4E8EB;
+	box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1), 0 6px 30px 0 rgba(0, 0, 0, 0.12);
+}
+
+fieldset {
+	background: #cdd4be;
+	border-color: #fffccc;
+
+}
+
+
+legend {
+	font-weight: bold;
 }
 
 #title{
@@ -32,7 +53,7 @@ form{
 form ol li {
 	background: #b9cf6a;
 	background: rgba(255,255,255,.3);
-	border-color: #e3ebc3;
+	border-color: #cfdde5;
 	border-color: rgba(255,255,255,.6);
 	border-style: solid;
 	border-width: .5%;
@@ -80,13 +101,22 @@ form label[for=mastercard] {
 }
 
 @media only screen and (max-width: 480px) {
+	body{
+		background: #5b675d;
+	}
 	.form {width: 40%;
 	}
 }
 @media only screen and (min-width: 480px) and (max-width: 768px) {
+	body{
+		background: #cfdde5;
+	}
 	.form {width: 75%;
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+	body{
+		background: #fffccc;
+	}
 	.form {width: 100%;
 	}
 }
