--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -40,13 +40,15 @@ body{
 	flex-direction: column;
 }
 h1, h2, h3, h4, h5, h6{
-	font-family: 'Quicksand', sans-serif;
+	font-family: 'Playfair Display SC', serif;
 }
 p{
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'futura-pt', sans-serif;
 }
 h1{
 	font-size: 1.75em;
+  color:#544d4d;
+  text-align: center;
 }
 h2{
 	font-size: 1.5em;
@@ -75,9 +77,9 @@ h6{
 
 /*-----HEADER & NAVIGATION-----*/
 header{
-	font-family: 'Quicksand', sans-serif;
+	font-family: 'Futura', sans-serif;
 	font-size: 105%;
-    box-shadow: 0px 18px 26px 1px rgba(141, 141, 139, .75);
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
     width: 100%;
     position: fixed;
 }
@@ -85,36 +87,36 @@ header{
 .top-nav ul{
 	list-style-type: none;
 	padding: 0;
-	background-color: #211D24; /*CHANGE*/
+	background-color: #FFFFFF; /*CHANGE*/
 	margin: 0;
 	display: block;
 }
 .top-nav ul li, .menu-icon{
-	border-top: 1px solid #DDDDDA; /*CHANGE*/
+	border-top: 1px solid #e0e0e0; /*CHANGE*/
 }
 .top-nav ul li a{
-	font-size: 1em;
-	color: #DDDDDA; /*CHANGE*/
+	font-size: 0.75em;
+	color: #544d4d; /*CHANGE*/
 	text-decoration: none;
-	padding: .5em 1em;
+	padding: 1em 1em;
 	display: block;
 	text-align: center;
 }
 .menu-icon a{
 	font-size: 1em;
-	color: #DDDDDA; /*CHANGE*/
+	color: #211D24; /*CHANGE*/
 	text-decoration: none;
 	padding: .5em 1em;
 	display: block;
 	text-align: center;
 }
 .top-nav ul li a.current-page{
-	color: #F54320;
+	color: #fb3e3e;
 	font-weight: bold;
 }
 .top-nav ul li a.current-page:before {
   content: "\27A4  ";
-  color: #F54320;
+  color: #fb3e3e;
   padding-right: 4px;
   position: relative;
   top: 1px;
@@ -138,63 +140,11 @@ header{
 
 /*-----LOGO-----*/
 .logo{
-	background-color: #211D24; /*CHANGE*/
+	background-color: #FFFFFF; /*CHANGE*/
 	margin: 0;
 	text-align: center;
 	padding: .25em .75em;
 }
 .logo img{
 	height: 3em;
-}
-
-/*-----FOOTER-----*/
-footer{
-	/*color: #F54320;*/
-	font-size: .85em;
-	text-align: center;
-	box-shadow: 0px -10px 30px 2px rgba(141, 141, 139, .75);
-}
-footer p{
-	padding-top: .5em;
-	padding-bottom: .75em;
-}
-
-.icon{
-	padding: .5em .25em 0;
-	height: 25px;
-}
-
-/*-----HOMEPAGE-----*/
-.main-content-home{
-	margin-top: 250px;
-}
-.home-flag{
-	background-color: #17BEBB;
-	color: #DDDDDA;
-	display: flex;
-	flex-direction: column;
-	max-width: 300px;
-	margin: auto;
-	padding: 1.5em;
-	box-shadow: 0px 8px 10px gray, -10px 8px 15px gray, 10px 8px 15px gray;
-}
-
-/*-----IMAGES PAGE ------*/
-.main-content-crafts{
-	margin-top: 250px;
-}
-/*photo gallery*/
-.crafts{
-	display: block;
-	margin: auto;
-	max-width: 1200px;
-}
-.photo-cell{
-	margin-bottom: 2%;
-	margin-left: 2%;
-}
-.photo-cell img {
-	width: 98%;
-  	display: block;
-  	box-shadow: 0px 0px 10px rgba(141, 141, 139, .75);
 }
