--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -16,10 +16,13 @@ html, body{
 	z-index: -999;
 	color: #E3AD02;
 }
+a{
+  color: #FF6969;
+}
 a.skip:active, a.skip:focus, a.skip:hover {
-    position:fixed;
-    top: auto;
-    left: auto;
+  position:fixed;
+  top: auto;
+  left: auto;
 	width: auto;
 	height: auto;
 	overflow: visible;
@@ -28,36 +31,39 @@ a.skip:active, a.skip:focus, a.skip:hover {
 html, body, header, footer{
     /* background-image: url("img/bg.png"); */
     /* background-color: #ECECEA; */
-    font-family: 'Ubuntu', sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 header, footer, .logo {
 	/* background-color: #211D24; */
 	color: #DDDDDA;
 }
 body{
-  background-image: url("background.png");
+  /* background-image: url("background.png"); */
   /* background-repeat: repeat-y; */
+  /* background-color: #f5eded; */
   background-attachment: fixed;
   display: flex;
 	flex-direction: column;
 }
 h1, h2, h3, h4, h5, h6{
 	font-family: 'Ubuntu', sans-serif;
-  color:#4A4A4A;
+  color:#1b1515;
 }
 p{
 	font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  color:#1b1515;
 }
 h1{
-	font-size: 1.5em;
+	font-size: 1.75em;
 }
 h2{
 	font-size: 1.5em;
 }
 h3{
-	font-size: 1.17em;
+	font-size: 4em;
 }
 h4{
 	font-size: 1.12em;
@@ -83,15 +89,15 @@ header{
 	font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
 	font-size: 120%;
-    width: 100%;
-    margin-bottom: 3%;
+  width: 100%;
+  margin-bottom: 3%;
     /* position: fixed; */
 }
 /*mobile-first*/
 .top-nav .menu {
   position: absolute;
-  top: 32px;
-  right: 10%;
+  top: 42px;
+  right: 5%;
 }
 
 #dropdown {
@@ -103,18 +109,16 @@ header{
 	padding: 0;
 	margin: 0;
   position: absolute;
-  top: 50px;
+  top: 58px;
   right: 10%;
   z-index: 1;
   background-color: #FFFFFF;
 	/* display: block; */
 }
-.top-nav ul li, .menu-icon{
-	border-top: 1px solid #e0e0e0;
-}
+
 .top-nav ul li a{
 	font-size: 0.75em;
-	color: #544d4d;
+	color: #1b1515;
 	text-decoration: none;
 	padding: 1em 1em;
 	display: block;
@@ -139,15 +143,15 @@ header{
   top: 1px;
 }
 .top-nav ul li a:hover, .menu-icon a:hover, .top-nav ul li a:focus, .menu-icon a:focus{
-    background-color: #FF6969;
-    color: #FFFFFF;
-    font-weight: bold;
+  background-color: #FF6969;
+  color: #FFFFFF;
+  font-weight: bold;
 }
 .top-nav ul li a:hover:before, .top-nav ul li a:focus:before{
-  	color: #FFFFFF;
-  	padding-right: 4px;
-  	position: relative;
-  	top: 1px;
+  color: #FFFFFF;
+  padding-right: 4px;
+  position: relative;
+  top: 1px;
 } */
 /*implement menu toogle*/
 /* .top-nav.toggle-open ul{
@@ -165,37 +169,41 @@ header{
 	padding: .25em .75em;
 }
 .logo img{
-	height: 3em;
+	height: 2em;
   position: absolute;
-  left: 10%;
+  left: 5%;
   top: 32px;
 }
 
-/*-----IMAGES PAGE ------*/
+/*-----main content ------*/
 .main-content-crafts{
-	margin-top: 250px;
+	margin-top: 0px;
 }
-/*photo gallery*/
+
 .crafts{
 	display: block;
 	margin: auto;
 	max-width: 1200px;
 }
-.photo-cell{
-  margin-bottom: 6%;
-	margin-left: 2%;
+
+.photo-cell {
+  position: relative;
 }
+
 .photo-cell img {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
+.photo-cell #c {
   filter: sepia() saturate(1) hue-rotate(310deg);
   background-blend-mode: lighten;
   opacity: 1;
-  width: 70%;
-  display: block;
-  margin: 0 auto;
   box-shadow: 10pt 15pt 20pt rgba(104, 103, 103, .5);
 }
 
-.photo-cell img:hover {
+.photo-cell #c:hover {
   filter: none;
   opacity: 1;
 }
@@ -203,5 +211,19 @@ header{
 
 .photo-cell h1 {
   text-align: right;
-  margin-right: 15%;
+  font-size: 1.3em;
+}
+
+
+/* footer */
+.footer p {
+  font-weight: lighter;
+  font-size: .75em;
+  text-align:center;
+}
+
+.footer {
+  display: block;
+  margin-top: 12%;
+  margin-bottom: 3%;
 }
